--- a/src/styles/pokedexPage.css
+++ b/src/styles/pokedexPage.css
@@ -1,5 +1,4 @@
 .pokedex {
-    
     padding-bottom: 25px;
     background-color: #F9F9F9;
 }
@@ -15,12 +14,13 @@
 /* ==================================== */
 
 .pokedex__header {
-    max-width: 1440px;
+    margin: auto;
+    /* max-width: 900px; */
     display: flex;
     flex-direction: column;
     margin: 30px;
-    /* justify-content: left;
-    align-items: left; */
+    justify-content: center;
+    align-items: center;
 }
 
 .pokedex__header h3 {
@@ -57,9 +57,10 @@
     border-radius: 5px 0 0 5px;
     box-shadow: 0px 3px 6px 0px #00000026;
 }
+
 .pokedex__form_container button {
     /* border: 1px solid red; */
-    padding: 10px 0 10px ;
+    padding: 10px 0 10px;
     width: 150px;
     background-color: #D93F3F;
     color: white;
@@ -67,7 +68,8 @@
     border-radius: 0 5px 5px 0;
     box-shadow: 0px 3px 6px 0px #00000026;
 }
-.pokedex_select{
+
+.pokedex_select {
     border: none;
     /* border: 1px solid #bfbfbf; */
     border-radius: 5px;
