--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -37,7 +37,7 @@
 }
 
 .form__container button {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     padding: 10px 0 10px;
     width: 150px;
     background-color: #D93F3F;
